flux/clusters/ephemeral/lightmare.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: lightmare
