flux/clusters/ephemeral/grafana-ingress.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    app.kubernetes.io/component: monitoring
    pod-security.kubernetes.io/enforce: privileged
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Observability"
    gethomepage.dev/name: Grafana
    gethomepage.dev/icon: grafana.png
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  rules:
    - host: grafana.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
  tls:
    - hosts:
        - grafana.${DOMAIN}
      secretName: grafana-tls
