flux/clusters/ephemeral/hubble-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Observability"
    gethomepage.dev/icon: "cilium.png"
    gethomepage.dev/name: "Hubble"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  rules:
    - host: hubble.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hubble-ui
                port:
                  number: 80
  tls:
    - hosts:
        - hubble.${DOMAIN}
      secretName: hubble-tls
